--- a/insurancecalculator/src/App.css
+++ b/insurancecalculator/src/App.css
@@ -28,14 +28,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .navbar-custom {
   background-color: #B22222; 
   margin: 20px auto; 
@@ -58,6 +50,17 @@
   font-size: 1.7rem;
 }
 
+#copyright{
+  font-size: 1rem;
+}
+
+
+.language{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .btn:hover,
 .btn{
   background-color: #B22222 !important; 
@@ -75,4 +78,77 @@
   box-shadow: none !important;
   border: 2px solid transparent !important; 
   padding: 35px;
+}
+
+.GetStarted{
+  padding-top: 70px;
+}
+
+.ViewAlso{
+  padding-top: 70px;
+  background-color: gray;
+  padding: 100px;
+}
+
+.Footer{
+  padding-top: 400px;
+}
+
+#ViewAlso{
+  font-weight: bold;
+}
+
+.Insurance{
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.mt-5{
+  background-color: gray;
+  padding-bottom: 25px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.carousel-container {
+  max-width: 800px; 
+  margin: auto;
+}
+
+.carousel-image {
+  width: 100%;
+  height: 400px; 
+  object-fit: cover; 
+}
+
+.transbox {
+  background: rgba(0, 0, 0, 0.3)
+}
+
+.space{
+  margin-bottom: 30px;
+  color: black;
+  text-decoration: none;
+}
+
+.icon {
+  width: 150px; 
+  height: auto;
+}
+
+.a:link{
+  color: black;
+}
+
+.space a:hover {
+  color: black;
+  background: #B22222;
+  padding: 10px;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+#map {
+  width: 900px;
+  height: auto;
 }
